# smil

./: .clang-format  .clang-tidy  .gitignore  .mailmap  .style.yapf  000-Doxygen-Modules-Order.txt  AUTHORS.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.new  Doxygen-Modules-Order.txt  LICENSE.txt  README  README.md  SmilVersion.txt  ideas.txt  license.txt  notes.txt  todo.txt
Addons/: 000-Doxygen-Group-Order.doxygen  000-Doxygen-Group-Order.h  CMakeLists.txt  Module.txt
Addons/3DBilateralFilter/: CMakeLists.txt  smil3DBilateralFilter.i
Addons/3DBilateralFilter/include/: D3DBilateralFilter.h  DFilter.hpp
Addons/Chabardes/: CMakeLists.txt  smilChabardes.i
Addons/Chabardes/include/: DChabardes.h  DMisc.h
Addons/Color/: CMakeLists.txt  smilColor.i
Addons/Color/include/: DAdvColor.h  DColorConvert.h  DColorMorpho.h
Addons/Color/src/: DAdvColor.cpp  DColorConvert.cpp  DColorMorpho.cpp
Addons/Color/test/: test_adv_color.cpp  test_color.cpp
Addons/Dendrogram/: CMakeLists.txt  notes.md  smilDendrogram.i
Addons/Dendrogram/include/: DendroModule.h
Addons/Dendrogram/test/: test_dendro_module.cpp  test_dendro_module.cpp.doesnt-work
Addons/Digraph/: CMakeLists.txt  smilDigraph.i
Addons/Digraph/include/: DDigraph.h
Addons/FFT/: CMakeLists.txt  FindFFTW.cmake  smilFFT.i
Addons/FFT/include/: DFFT.hpp
Addons/FFT/test/: test_fft.cpp
Addons/FastBilateralFilter/: CMakeLists.txt  smilFastBilateralFilter.i
Addons/FastBilateralFilter/include/: DFastFilter.h  FastBilateralFilter.hpp
Addons/Features/: CMakeLists.txt  smilFeatures.i
Addons/Features/include/: DHoughTransform.hpp
Addons/Features/test/: test_hough.cpp
Addons/Filters/: CMakeLists.txt  smilFilters.i
Addons/Filters/include/: DGaborFilter.h  D_Filters.h  Dfilter3DBilateral.h  DfilterCanny.h  DfilterDeriche.h  DfilterFastBilateral.h  DfilterGabor.h  DfilterGaussian.h  DfilterKuwahara.h  DfilterMeanShift.h  DfilterNormalize.h  (+4 more)
Addons/GaborFilter/: smilGaborFilter.i
Addons/GraphCuts/: CMakeLists.txt  smilGraphCuts.i
Addons/HoughTransform/: CMakeLists.txt  smilFeatures.i  smilHoughTransform.i
Addons/MorphM/: CMakeLists.txt  smilMorphM.i
Addons/MorphoExtras/: CMakeLists.txt  smilMorphoExtras.i
Addons/OpenCV/: CMakeLists.txt  smilOpenCV.i
Addons/Parsimonious/: CMakeLists.txt  smilParsimonious.i
Addons/PathOpening/: CMakeLists.txt  smilPathOpening.i
Addons/QVtkViewer/: CMakeLists.txt  smilQVtkViewer.i
Addons/Samg/: CMakeLists.txt  smilSamg.i
Addons/StochasticWS/: CMakeLists.txt  smilStochasticWS.i
Addons/Transformations/: CMakeLists.txt  smilTransformations.i
Addons/Vtk/: CMakeLists.txt  smilVtk.i
Addons/VtkInterface/: CMakeLists.txt  smilVtkInterface.i
Addons/ZhangSkel/: CMakeLists.txt  smilZhangSkel.i
Addons/ZoneMatrix/: CMakeLists.txt  smilZoneMatrix.i
Core/: 000-Doxygen-Core-Group-Order.h  000-Doxygen-Group-Order.doxygen  000-Doxygen-Group-Order.h  CMakeLists.txt  smilCore.i  smilCorePython.i
Core/include/: DBaseImage.h  DBaseObject.h  DBench.h  DBinary.h  DBitArray.h  DColor.h  DCommon.h  DCore.h  DCoreEvents.h  DCoreInstance.h  DCpuID.h  DErrors.h  DEvent.h  DEventHandler.h  DEventReceptor.h  DImage.h  DImageArith.h  DImage_BIN.h  DImage_Bit.h  DLineArith.h  DLineArith_BIN.h  DLineArith_Bit.h  DLineArith_SSE.h  DMultichannelTypes.h  DNumpy.h  DSignal.h  DSlot.h  DString.h  DTest.h  DTime.h  DTimer.h  DTypes.h
Core/src/: DBaseImage.cpp  DBaseObject.cpp  DCoreInstance.cpp  DCpuID.cpp  DEvent.cpp  DEventHandler.cpp  DEventReceptor.cpp  DImage.cpp  DImageArith_BIN.cpp  DImage_BIN.cpp  DImage_Bit.cpp  DSignal.cpp  DSlot.cpp  DString.cpp  DTest.cpp  DTimer.cpp
Core/test/: bench_core.cpp  core_bench.cpp  test.py  test_arith.cpp  test_cpuid.cpp  test_graph.cpp  test_histogram.cpp  test_image.cpp  test_operators.cpp  test_point.cpp
DCore/: CMakeLists.txt  smilCorePython.i
DCore/cmake/: OptimizeForArchitecture.cmake  smil.py
DCore/gui/: CMakeLists.txt
DCore/include/: DBaseImage.h  DCommon.h  DImage.h  DImageIO_PNG.h  DStructuringElement.h  D_BaseObject.h  D_Types.h
DCore/src/: DBaseImage.cpp  DImageIO_PNG.cpp  D_Image.cpp
DCore/test/: test.cpp  test.py
DMorpho/: CMakeLists.txt  smilMorphoPython.i
DMorpho/include/: DMorpho.h
DMorpho/test/: test.cpp
Gui/: CMakeLists.txt  smilGui.i  smilGuiPython.i
Gui/AALib/: DAAImageViewer.hpp
Gui/Qt/: DQtGuiInstance.cpp  DQtGuiInstance.h  DQtImageViewer.cpp  DQtImageViewer.hpp  DQtImageViewer.hxx  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  ImageViewerApp.cpp  ImageViewerApp.h  ImageViewerApp.ui  ImageViewerWidget.cpp  ImageViewerWidget.h  MagnifyView.cpp  MagnifyView.h  QtApp.h
Gui/include/: DBaseImageViewer.h  DGui.h  DGuiInstance.h  DImageViewer.h  DQtGuiInstance.h
Gui/src/: DBaseImageViewer.cpp  DGui.cpp  DGuiInstance.cpp  DImageViewer.cpp  DQtGuiInstance.cpp  DQtImageViewer.cpp
UserModules/: CMakeLists.txt
UserModules/Chabardes/: CMakeLists.txt  smilChabardes.i  smilSampleModule.i
UserModules/DendroModule/: smilDendroModule.i
UserModules/Marcoteg/: CMakeLists.txt  smilMarcoteg.i
UserModules/Morard/: CMakeLists.txt  smilMorard.i
UserModules/SampleModule/: CMakeLists.txt  smilSampleModule.i
doc/: CMakeLists.txt  SmilDoxyfile.in  TODO.txt  demo-parsimonious-path-opening.py  doxy2swig.py  notes.txt  smil_on_windows.md
doc/doxygen/: 10-Authors.doxygen  101-Authors.doxygen  20-License.doxygen  201-License.doxygen  30-Contribs.doxygen  301-Contribs.doxygen  40-Instructions.doxygen  401-Instructions.doxygen  402-Instructions.doxygen  4021-DataTypes.doxygen  4025-DataTypes.doxygen  50-Numpy.doxygen  500-C++-programming.doxygen  510.doxygen  520.doxygen  530.doxygen  540.doxygen  550.doxygen  560.doxygen  60-Webstart.doxygen.org  800-Python-programming.doxygen  801-Numpy.doxygen  860.doxygen  Authors.doxygen  Biblio.bib  CMakeLists.txt  DoxyAliases.txt  DoxyAliases.txt.0  Doxyfile  DoxygenLayout.xml  DoxygenLayout.xml.in  DoxygenLayout.xml.in.orig  License.doxygen  MainPage.doxygen  Numpy.doxygen  SmilDoxyfile.in  SmilDoxyfile.in.0  SmilDoxyfile.in.1-bad  SmilDoxyfile.in.1-good  Webstart.doxygen  (+1 more)
(+763 files in other folders)
